export menu z-index fixed

--- a/src/assets/tabs-component.css
+++ b/src/assets/tabs-component.css
@@ -7,7 +7,7 @@
     border-bottom: dotted 1px #ddd;
     border-radius: 6px;
     margin-bottom: 5px;
-    z-index: 1000;
+    z-index: 98;
 }
 
 @media (min-width: 700px) {
